--- a/index.css
+++ b/index.css
@@ -14,8 +14,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 64px;
     background-color: hsl(0, 0%, 17%);
+}
+
+header, main {
+    padding: 10px 72px;
 }
 
 header img {
@@ -117,3 +120,73 @@ img {
     transition: all .5s ease;
 }
 
+main {
+    padding-top: 72px;
+    padding-bottom: 48px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 36px 72px;
+}
+
+h1 {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
+    text-transform: uppercase;
+    font-size: 32px;
+    font-weight: 600;
+    color: black;
+    margin-bottom: 1em;
+}
+
+h2 {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 600;
+    color: black;
+    margin-bottom: 1em;
+}
+
+main p {
+    padding-bottom: 36px;
+}
+
+.benefit {
+    margin-bottom: 2em;
+}
+
+.benefit a {
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+    color: hsl(0, 0%, 100%);
+    background-color: hsl(37, 71%, 36%);
+    padding: 10px 30px;
+    border: 2px solid hsl(37, 71%, 36%);
+}
+
+.benefit a:hover {
+    background-color: hsl(43, 86%, 28%);
+    border: 2px solid hsl(43, 86%, 28%);
+    transition: all .5s ease;
+}
+
+.benefit-1 {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
+}
+
+.benefit-2 {
+    grid-row: 2 / span 1;
+    grid-column: 2 / span 1;
+}
+
+.benefit-3 {
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 1;
+}
+
+.benefit-4 {
+    grid-row: 3 / span 1;
+    grid-column: 2 / span 1;
+}
