--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ header img, .navigation {
     border: 1px solid hsl(0, 0%, 100%);
 }
 
-.actions a + a{
+.actions a + a {
     margin-left: 8px;
 }
 
@@ -192,4 +192,113 @@ main p {
 .benefit-4 {
     grid-row: 3 / span 1;
     grid-column: 2 / span 1;
+}
+
+@media (max-width: 1025px) {
+    header, main {
+        padding: 4px 36px;
+    }
+
+    h2 {
+        grid-row: 1 / span 1;
+        grid-column: 1 / span 2;
+        margin-top: 36px;
+        margin-bottom: 26px;
+    }
+
+    main h2 {
+        text-align: center;
+    }
+
+    .navigation li + li {
+        margin-left: 24px;
+    }
+}
+
+@media (max-width: 860px) {
+    .navigation > ul {
+        display: flex;
+        flex-flow: column;
+        margin-left: 36px;
+    }
+
+    .navigation li + li {
+        margin-left: 0;
+    }
+
+    header {
+        display: block;
+        padding-bottom: 25px;
+    }
+
+    .meta {
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
+    .actions {
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 36px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+
+    h3 {
+        font-size: 26px;
+    }
+}
+
+@media (max-width: 610px) {
+    h1 {
+        font-size: 30px;
+    }
+
+    h2 {
+        font-size: 24px;
+        margin-top: 10px;
+        margin-bottom: 0px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+    header {
+        display: block;
+        padding-bottom: 25px;
+    }
+
+    .meta {
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
+    .actions {
+        text-align: center;
+    }
+
+    .benefit-1 {
+        grid-row: 2 / span 1;
+        grid-column: 1 / span 2;
+    }
+    
+    .benefit-2 {
+        grid-row: 3 / span 1;
+        grid-column: 1 / span 2;
+    }
+    
+    .benefit-3 {
+        grid-row: 4 / span 1;
+        grid-column: 1 / span 2;
+    }
+    
+    .benefit-4 {
+        grid-row: 5 / span 1;
+        grid-column: 1 / span 2;
+    }
 }
